# Kubekeeper

./: .gitignore  Kubekeeper.py  LICENSE  README.md  pyproject.toml  requirements.txt
crds/: driftpolicy.yaml  remediationhistory.yaml
crds/default-policies/: hpa-never-zero.yaml  no-latest-image-tag.yaml  no-privileged-containers.yaml  require-liveness-probes.yaml  require-resource-limits.yaml
kubekeeper/cli/: main.py
kubekeeper/operator/: __main__.py  crd.py  main.py
kubekeeper/operator/policies/: __init__.py  base.py  hpa_zero.py  image_tag.py  liveness_probe.py  privileged.py  resource_limits.py
tests/: test_policies.py  test_remediation.py
